tests/baselines/reference/asyncFunctionDeclaration8_es5.errors.txt
tests/cases/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration8_es5.ts(1,12): error TS2552: Cannot find name 'await'. Did you mean 'Math'?
tests/cases/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration8_es5.ts(1,20): error TS2552: Cannot find name 'foo'. Did you mean 'v'?


==== tests/cases/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration8_es5.ts (2 errors) ====
    var v = { [await]: foo }
               ~~~~~
!!! error TS2552: Cannot find name 'await'. Did you mean 'Math'?
                       ~~~
!!! error TS2552: Cannot find name 'foo'. Did you mean 'v'?